Fixed vertical spacing Alphabetized css attributes. Removed unnecessary positioning attributes.

--- a/css/algaNorth.css
+++ b/css/algaNorth.css
@@ -2,9 +2,9 @@
 
 main {
    font-family: Tahoma, Arial, Helvetica;
-   margin: 0 3em 4em 3em ;
+   margin: 0 3em 4em 3em;
 }
-main > section { margin-bottom: 2em; }
+main > section { margin-bottom: 1em; }
 
 main > div,
 main > #header,
@@ -20,10 +20,10 @@ main > section > div > img {
     text-align: center;
 }
 #header > nav {
+    display: none;
     position: absolute;
     right: 0;
     top: 3em;
-    display: none;
 }
 #header > nav > a {
    background-color: #fff;
@@ -70,13 +70,11 @@ div.bar {
     padding: 0;
     text-transform: uppercase;
 }
-
 div.bar h1 {
    text-align: center;
 }
 
 #uses-info {
-   position: relative;
    background: 
      linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
      url('/img/fotofondo.png');
@@ -87,8 +85,7 @@ div.bar h1 {
 }
 
 #uses-info p {
-   position: relative;
-   color: white;
+   color: #fff;
    text-align: center;
    padding: 1em;
 }
@@ -98,19 +95,16 @@ div.body {
     text-align: justify;
     text-justify: inter-word;
 }
-div.body > p , div.body > img {
-    margin: 0.5em 0 0em 0;
-}
+div.body > p { margin: 0.5em 0; }
+div.body > img { margin-bottom: 0.5em; }
 
 .icons {
+   color: #fff;
+   font-size: 1.6em;
+   margin: 0.3em 0;
    position: relative;
    text-align: center;
-   font-size: 1.6em;
-   top: 0.5em;
-   margin-bottom: 1em;
-   color: #fff;
 }
-
 .icons i {
    margin-right: 1em;
 }
@@ -127,13 +121,11 @@ div.body > p , div.body > img {
    width: 100%;
    z-index: 1000;
 }
-
 .contact-bar div {
    display: inline-block;
    text-align: center;
    width: 25em;
 }
-
 .contact-bar div span {
    left: 0;
    position: relative;
